# ttrpg-collector

./: .env.example  .env.test  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  deploy.yml
button-smoke/: .gitignore  README.md  env.example  package-lock.json  package.json  playwright.config.ts
button-smoke/tests/: auth.setup.ts  consent.spec.ts
docs/: architecture.md  dave-audit.md
scripts/: e2e-run.sh  sync-s3.sh  test.sh
src/collector/: bot.py
src/collector/cogs/: notes.py  recording.py
src/collector/metadata/: quality_filters.py  session_meta.py
src/collector/storage/: local_buffer.py  s3_upload.py  session_bundle.py
src/collector/utils/: logging.py
src/collector/voice/: recorder.py  sink.py  stream_manager.py
test-soak/: README.md  matrix.py  soak.py
tests/: test_consent_manager.py  test_quality_filters.py  test_session_bundle.py  test_sink.py  test_stream_manager.py
voice-capture/: Cargo.toml  build.rs
voice-capture/migrations/: 001_initial.sql  002_transcripts.sql
voice-capture/src/: api_client.rs  config.rs  db.rs  harness.rs  lib.rs  main.rs  session.rs  state.rs  telemetry.rs
voice-capture/src/commands/: consent.rs  license.rs  mod.rs  record.rs  respond.rs  stop.rs
voice-capture/src/consent/: embeds.rs  manager.rs  mod.rs
voice-capture/src/session/: actor.rs  heal.rs  mod.rs  participant.rs  phases.rs  restart.rs  stabilization.rs
voice-capture/src/storage/: bundle.rs  mod.rs  s3.rs
voice-capture/src/voice/: buffer.rs  events.rs  mixer.rs  mod.rs  receiver.rs
voice-capture/tests/: consent_test.rs  db_test.rs  pseudo_test.rs  s3_test.rs
voice-capture/tests/common/: mod.rs
