[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/collector"]

[project]
name = "ttrpg-collector"
version = "0.1.0"
description = "Discord bot for collecting TTRPG session audio for an open dataset"
requires-python = ">=3.12"
dependencies = [
    "py-cord[voice]>=2.6",
    "pydantic-settings>=2.0",
    "boto3>=1.35",
    "aioboto3>=13.0",
    "structlog>=24.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
collector = "collector.bot:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
