[package]
name = "ttrpg-collector"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ttrpg-collector"
path = "src/main.rs"

[[bin]]
name = "feeder-bot"
path = "src/bin/feeder_bot.rs"
required-features = ["e2e-harness"]

[dependencies]
# Discord
serenity = { version = "0.12", default-features = false, features = [
    "gateway", "voice", "rustls_backend", "model", "cache"
] }
songbird = { git = "https://github.com/serenity-rs/songbird.git", branch = "next", features = [
    "receive", "driver"
] }

# Audio codec support for Songbird file playback
symphonia = { version = "0.5", features = ["wav", "pcm", "ogg", "vorbis"] }

# Async
tokio = { version = "1", features = ["full"] }

# Config + CLI
clap = { version = "4", features = ["derive", "env"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto (pseudonymization)
sha2 = "0.10"
hex = "0.4"

# HTTP client (Data API)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"

# Logging + telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", optional = true }

# E2E test harness — only compiled when the `e2e-harness` feature is on.
# The feeder-bot binary uses axum to expose a tiny local control API so an
# external test runner can drive join/play/stop/leave during E2E runs.
axum = { version = "0.7", optional = true }

# TLS
rustls = { version = "0.23", features = ["ring"] }

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bytemuck = "1"


[features]
prometheus = ["dep:metrics-exporter-prometheus"]
# E2E harness: builds the feeder-bot binary and any other dev-only harness
# code. NEVER enable in prod builds of the collector.
e2e-harness = ["dep:axum"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1"
walkdir = "2"
